--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,16 +1,65 @@
 body {
     font-family: Arial, sans-serif;
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
+    margin: 0;
+    padding: 0;
     background-color: #f5f5f5;
 }
 
+header {
+    display: flex;
+    align-items: center;
+    background-color: #333;
+    color: white;
+    padding: 10px;
+}
+
+.logo {
+    height: 50px;
+    margin-right: 10px;
+}
+
 .container {
-    background-color: white;
+    display: flex;
+    max-width: 1200px;
+    margin: 0 auto;
+    align-items: center; /* Cambia 'flex-start' a 'center' para alinear el menú en el medio verticalmente */
+    justify-content: center;
+    min-height: calc(100vh - 70px);
+}
+
+nav {
+    width: 250px;
+    background-color: #333;
+    padding: 30px;
+    margin-right: 20px;
+    height: auto; /* Cambia la altura a 'auto' para que se ajuste al contenido */
+}
+
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+nav ul li {
+    margin-bottom: 15px; /* Aumenta el margen inferior de los elementos del menú */
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+}
+
+nav ul li a.active {
+    font-weight: bold;
+    color: #4CAF50;
+}
+
+main {
+    flex-grow: 1;
     padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    max-width: 800px;
 }
 
 .input-group {
