--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,8 @@
     <div class="container">
         <nav>
             <ul>
-                <li><a href="#" class="active">Cargar Imagen</a></li>
-                <li><a href="#">Realidad Aumentada</a></li>
+                <li><a href="/" class="active">Cargar Imagen</a></li>
+                <li><a href="/ar">Realidad Aumentada</a></li>
             </ul>
         </nav>
         <main>
