--- a/templates/ar.html
+++ b/templates/ar.html
@@ -18,6 +18,7 @@
             <ul>
                 <li><a href="/">Cargar Imagen</a></li>
                 <li><a href="/ar" class="active">Realidad Aumentada</a></li>
+                <li><a href="/saved-models">Modelos Guardados</a></li>
             </ul>
         </nav>
         <main>
@@ -40,6 +41,8 @@
                         <ul class="folders-list" id="foldersList">
                             <!-- Las carpetas se cargarán aquí dinámicamente -->
                         </ul>
+                        <button id="downloadBtn" class="download-btn">Descargar</button>
+                        <button id="saveBtn" class="save-btn">Guardar</button>
                     </div>
                 </div>
             </div>
