--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
             <ul>
                 <li><a href="/" class="active">Cargar Imagen</a></li>
                 <li><a href="/ar">Realidad Aumentada</a></li>
+                <li><a href="/saved-models">Modelos Guardados</a></li>
             </ul>
         </nav>
         <main>
